After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763403 - bad: video sink: Post un-handled keyboard/mouse events as message to application
bad: video sink: Post un-handled keyboard/mouse events as message to application
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.8.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-09 23:49 UTC by Vineeth
Modified: 2016-03-26 20:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkbasesink: Post unhandled events (1.27 KB, patch)
2016-03-09 23:50 UTC, Vineeth
committed Details | Review
dfbvideosink: Post unhandled events (1.25 KB, patch)
2016-03-09 23:51 UTC, Vineeth
committed Details | Review
d3dbvideosink: Post unhandled events (1.25 KB, patch)
2016-03-09 23:53 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-03-09 23:49:20 UTC
Few videosinks are not posting unhandled events to application.
Handling the same in this bug.
Comment 1 Vineeth 2016-03-09 23:50:16 UTC
Created attachment 323558 [details] [review]
gtkbasesink: Post unhandled events
Comment 2 Vineeth 2016-03-09 23:51:52 UTC
Created attachment 323559 [details] [review]
dfbvideosink: Post unhandled events
Comment 3 Vineeth 2016-03-09 23:53:11 UTC
Created attachment 323560 [details] [review]
d3dbvideosink: Post unhandled events
Comment 4 Sebastian Dröge (slomo) 2016-03-24 13:00:46 UTC
commit 66bac3eb8606ead677bc6bdd7b9f2b34bc5061ad
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Mar 10 08:50:28 2016 +0900

    d3dvideosink: post message to application for unhandled keyboard/mouse events
    
    https://bugzilla.gnome.org/show_bug.cgi?id=763403

commit 1ac501d42706538578c21ed50ba1ae62dcb0fc9b
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Mar 10 08:49:01 2016 +0900

    dfbvideosink: post message to application for unhandled keyboard/mouse events
    
    https://bugzilla.gnome.org/show_bug.cgi?id=763403

commit 9fe6b9b86b1e7e029a9feaf80060d355fd1e9d4d
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Mar 10 08:44:57 2016 +0900

    gtkbasesink: post message to application for unhandled keyboard/mouse events
    
    https://bugzilla.gnome.org/show_bug.cgi?id=763403
Comment 5 Tim-Philipp Müller 2016-03-26 20:21:30 UTC
Comment on attachment 323558 [details] [review]
gtkbasesink: Post unhandled events

>-  if (GST_IS_PAD (pad)) {
>-    if (GST_IS_EVENT (event))
>-      ...
>-
>+  if (GST_IS_PAD (pad) && GST_IS_EVENT (event)) {
>+    ...
>+    gst_event_unref (event);
>     gst_object_unref (pad);
>   }
> }

Just for the record, this is not really equivalent. We would now leak the pad in case where the pad is valid, but the event is not valid. The event will/should always be valid here of course, so will not be a problem in practice.